<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:fbutton="http://schemas.android.com/tools"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:background="@color/dialog_background"
              android:orientation="vertical">

  <LinearLayout
      android:layout_width="700dp"
      android:layout_height="wrap_content"
      android:background="#6FE7DD">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="108dp"
        android:padding="20dp"
        android:textColor="@color/actionbar_title"
        android:text="@string/title_fragment_config"
        android:textSize="20sp"
        android:textStyle="bold"/>
  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="100dp"
      android:gravity="center"
      android:paddingTop="20dp">

    <ImageView
        android:id="@+id/image_view_app_icon"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:maxHeight="200dp"
        android:maxWidth="200dp"
        android:minHeight="70dp"
        android:minWidth="70dp"/>
  </LinearLayout>


  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/image_subject"
        android:textStyle="bold"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

      <Button
          android:layout_marginTop="5dp"
          android:id="@+id/button_image"
          android:layout_width="70dp"
          android:layout_height="37dp"
          android:background="#08D9D6"
          android:layout_toRightOf="@+id/edit_text_image"
          android:text="@string/button_directory"
          android:textSize="9dp"/>

      <EditText
          android:layout_marginLeft="30dp"
          android:id="@+id/edit_text_image"
          android:layout_width="200dp"
          android:layout_height="50dp"
          android:focusable="false"
          android:text="@string/edit_text_directory"
          android:textSize="11sp"
          />
    </RelativeLayout>
  </LinearLayout>

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="20dp"
      android:layout_marginTop="10dp"
      android:text="@string/size_subject"
      android:textStyle="bold"/>

  <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
      android:id="@+id/seek_bar_size"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="20dp"
      android:layout_marginRight="20dp"
      />


  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="20dp"
      android:layout_marginTop="10dp"
      android:text="- Shape :"
      android:textStyle="bold"/>

  <com.jaredrummler.materialspinner.MaterialSpinner
      android:id="@+id/spinner_shape"
      android:layout_width="100dp"
      android:layout_height="40dp"
      android:layout_marginLeft="30dp"
      android:layout_marginTop="10dp"
      app:ms_background_color="#08D9D6"/>

  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:gravity="right">

    <info.hoang8f.widget.FButton
        android:id="@+id/button_ok"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/button_ok"
        android:textColor="#95E1D3"
        fbutton:buttonColor="@color/fbutton_color_turquoise"
        />

    <info.hoang8f.widget.FButton
        android:layout_margin="10dp"
        android:id="@+id/button_cancel"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_marginLeft="8dp"
        android:layout_toRightOf="@+id/button_ok"
        android:text="@string/button_cancel"
        android:textColor="#95E1D3"
        fbutton:buttonColor="@color/fbutton_color_turquoise"
        />
  </RelativeLayout>
</LinearLayout>