<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="wrap_content"
              android:layout_height="match_parent"
              android:background="@color/dialog_background"
              android:orientation="vertical">

  <LinearLayout
      android:layout_width="700dp"
      android:layout_height="wrap_content"
      android:background="#6FE7DD">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="108dp"
        android:padding="20dp"
        android:text="@string/title_fragment_info"
        android:textColor="@color/actionbar_title"
        android:textSize="20sp"
        android:textStyle="bold"/>
  </LinearLayout>

  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="10dp">

    <TextView
        android:id="@+id/app_subject"
        style="@style/subject_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ứng dụng : "/>

    <TextView
        style="@style/content_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/app_subject"
        android:text="@string/app_name"/>
  </RelativeLayout>

  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="10dp">

    <TextView
        android:id="@+id/app_version"
        style="@style/subject_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Phiên bản : "/>

    <TextView
        style="@style/content_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/app_version"
        android:text="@string/app_version"/>
  </RelativeLayout>

  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="10dp">

    <TextView
        android:id="@+id/app_feature"
        style="@style/subject_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Tính năng : "/>

    <TextView
        style="@style/content_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/app_feature"
        android:text="@string/app_feature"/>
  </RelativeLayout>

  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="10dp">

    <TextView
        android:id="@+id/app_comment"
        style="@style/subject_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Góp ý / Liên hệ : "/>

    <TextView
        style="@style/content_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/app_comment"
        android:text="@string/app_comment"/>
  </RelativeLayout>

  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="10dp">

    <TextView
        android:id="@+id/app_author"
        style="@style/subject_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Tác giả : "/>

    <TextView
        style="@style/content_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/app_author"
        android:text="@string/app_author"/>
  </RelativeLayout>


</LinearLayout>